header, hero, description,services,works adaptive

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,13 @@
+
+@import './base/reset';
+@import './base/variables';
+@import './base/visually-hidden';
+
 @import './common';
-@import './example';
+@import './header-hero';
+@import './description';
+@import './services';
+@import './works';
+// @import './footer';
+
+
