--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,41 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+html, body {
+	-webkit-overflow-scrolling: touch;
+	height: 100%;
+	min-width: 320px;
+}
+
+body {
+	background-color: var(--primery-background-color);
+	color: var(--primery-text-color);
+	font-family: 'Cormorant Garamond', serif;
+	// font-family: 'EB Garamond', serif;
+	font-size: 18px;
+	letter-spacing: 0.04em;
+}
+.wrapper{
+	overflow: hidden;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.main{
+	flex: 1 1 auto;
+}
+
+
+[class*="__container"]{
+	padding: 25px 15px;
+
+	@media screen and (min-width: $tablet){
+		padding: 35px 15px;
+	}
+	@media screen and (min-width: $desktop){
+		padding: 50px 15px;
+	}
+	max-width: 1230px;
+	margin: 0 auto;
+	
+}
