--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,9 +10,9 @@
 		</h1>
 		<button class="hero__button">
 			<svg class="hero__icon" width="20" height="30">
-				<use href="images/symbol-defs.svg#icon-mouse"></use>
+				<use href="images/symbol-defs.svg#icon-car-wash"></use>
 			</svg>
-			<p>Прокрутіть донизу</p>
+			<p>Замовити послугу</p>
 		</button>
 	</div>
 </section>
