--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -51,6 +51,7 @@ display: none;
 }
 .menu__item {
 	margin-left: 20px;
+	max-width: 80px;
 }
 .menu__link {
 	font-size: 24px;
@@ -225,6 +226,7 @@ bottom: 9px;
 	}
 
 	&__title {
+		max-width: 290px;
 		font-size: 40px;
 		line-height: 120%;
 		font-family: 'EB Garamond', serif;
@@ -232,6 +234,7 @@ bottom: 9px;
 		text-align: center;
 
 			@media screen and (min-width: $tablet){
+				max-width: 650px;
 				font-size: 58px;
 			}
 		
@@ -250,6 +253,7 @@ bottom: 9px;
 	}
 
 	&__button {
+		padding: 10px 15px;
 		display: flex;
 		background-color: inherit;
 		display: flex;
@@ -259,12 +263,16 @@ bottom: 9px;
 		font-size: 16px;
 		line-height: 140%;
 		color: #595959;
+		border: 1px solid #595959;
+		border-radius: 60px;
 
 			@media screen and (min-width: $tablet) {
+				padding: 15px 20px;
 				font-size: 19px;
 			}
 
 			@media screen and (min-width: $desktop ) {
+				padding: 20px 30px;
 				font-size: 21px;
 			}
 	}
