--- a/src/partials/services.html
+++ b/src/partials/services.html
@@ -1,4 +1,4 @@
-<section class="main-services services">
+<section class="main-services services" id="services">
 	<div class="services__container">
 		<h2 class="visually-hidden">Послуги компанії</h2>
 		<ul class="services__list">
