--- a/src/partials/works.html
+++ b/src/partials/works.html
@@ -1,4 +1,4 @@
-<section class="main__works works">
+<section class="main__works works" id="works">
 	<div class="works__container">
 		<h2 class="works__title">Результати нашої роботи</h2>
 
