--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
 				</li>
 
 				<li class="menu__item">
-					<a class="menu__link" href="#">Послуги</a>
+					<a class="menu__link" href="#services">Послуги</a>
 				</li>
 
 				<a class="header__logo header__logo-second" href="#">
@@ -28,11 +28,11 @@
 				</a>
 
 				<li class="menu__item">
-					<a class="menu__link" href="#">Відгуки</a>
+					<a class="menu__link" href="#works">Відгуки</a>
 				</li>
 
 				<li class="menu__item">
-					<a class="menu__link" href="#">Контакти</a>
+					<a class="menu__link" href="#footer">Контакти</a>
 				</li>
 			</ul>
 		</nav>
