--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <div class="header__container">
 	<div class="header__body">
-		<a class="header__logo header__logo-first" href="#">
-			<svg class="header__icon logo" width="40" height="40">
+		<a class="header__logo logo header__logo-first" href="#">
+			<svg class="header__icon" width="40" height="40">
 				<use href="images/symbol-defs.svg#icon-vacuum-cleaner"></use>
 			</svg>
 		</a>
@@ -19,8 +19,8 @@
 					<a class="menu__link" href="#services">Послуги</a>
 				</li>
 
-				<a class="header__logo header__logo-second" href="#">
-					<svg class="header__icon logo" width="40" height="40">
+				<a class="header__logo logo header__logo-second" href="#">
+					<svg class="header__icon" width="40" height="40">
 						<use
 							href="images/symbol-defs.svg#icon-vacuum-cleaner"
 						></use>
