--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -11,6 +11,7 @@ body {
 	color: var(--primery-text-color);
 	font-family: 'Cormorant Garamond', serif;
 	// font-family: 'EB Garamond', serif;
+	font-weight: normal;
 	font-size: 18px;
 	letter-spacing: 0.04em;
 }
