--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -3,6 +3,7 @@
 --primery-text-color: #ffffff;
 --accent-color: #b71d1d;
 --hover-color: #595959;
+--btn-color: #e6e6e6;
 
 	--transition-duration: 250ms;
 	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
