--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
 				<span class="hero__title-car">CAR</span>
 			</span>
 		</h1>
-		<button class="hero__button">
+		<button data-modal-open class="hero__button">
 			<svg class="hero__icon" width="20" height="30">
 				<use href="images/symbol-defs.svg#icon-car-wash"></use>
 			</svg>
