--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -263,8 +263,8 @@ bottom: 9px;
 		font-style: normal;
 		font-size: 16px;
 		line-height: 140%;
-		color: #595959;
-		border: 1px solid #595959;
+		color: var(--btn-color);
+		border: 1px solid var(--btn-color);
 		border-radius: 60px;
 
 			@media screen and (min-width: $tablet) {
@@ -280,8 +280,8 @@ bottom: 9px;
 
 	&__icon {
 		margin-right: 15px;
-		fill: #595959;
-		stroke: #595959;
+		fill: var(--btn-color);
+		stroke: var(--btn-color);
 	}
 }
 
