--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -21,22 +21,15 @@
 
 			<label class="modal__field">
 				Телефон
-				<input class="modal__input" type="tel" name="tel" />
-				<svg class="modal__icon" width="18" height="18">
-					<use href="./images/symbol-defs.svg#icon-phone-black"></use>
-				</svg>
-			</label>
-
-			<label class="modal__field" for="email">
-				Пошта
 				<input
 					class="modal__input"
-					type="email"
-					name="email"
-					id="email"
+					type="tel"
+					name="tel"
+					minlength="9"
+					maxlength="13"
 				/>
 				<svg class="modal__icon" width="18" height="18">
-					<use href="./images/symbol-defs.svg#icon-email-black"></use>
+					<use href="./images/symbol-defs.svg#icon-phone-black"></use>
 				</svg>
 			</label>
 
